2006-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en (What's MU): Update required version of APEL to 10.7
	or later.

	* MU-CFG (PACKAGEDIR): Use install-get-default-package-directory.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-MK (compile-mu-package): Use batch-update-directory-autoloads
	if it is available instead of batch-update-directory.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-CFG (PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies and configure-package-path
	as well as (early|late|last)-packages.

2005-06-06  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mu-cite.el (mu-cite-original): Allow nil as a value of
	`mu-cite-cited-prefix-regexp'.

2002-02-25  Daiki Ueno  <ueno@unixuser.org>

	* MU-MK (config-mu-package): Add auto-autoloads and custom-load
	only to `mu-modules-to-compile'.
	(compile-mu-package): Don't compile `mu-modules-not-to-compile'.

2001-12-21  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el (mu-cite-load-registration-file): Reverted.  I've
	got XEmacs wrong that it does'nt support the coding system magic
	cookie.  However it has been working since XEmacs 21.2.21.  Users
	can avoid mis-decoding a file by setting the value of the option
	`mu-registration-file-coding-system-for-read' properly even if
	they are using one of old (X)Emacsen.
	(mu-registration-file-coding-system-for-read): Fix a doc-string.

2001-08-29  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el (mu-cite-load-registration-file): Retry to read
	a file when failed.

2001-08-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el (mu-cite-save-registration-file): Use
	`mu-registration-file-coding-system-for-write' for writing a file.
	(mu-registration-file-coding-system-for-read): Use `defvar'
	instead of `defcustom' to define it.
	(mu-registration-file-coding-system-for-write): New user option.
